--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "grunt-legacy-util",
   "description": "Some old grunt utils provided for backwards compatibility.",
-  "version": "1.1.1",
-  "author": "\"Cowboy\" Ben Alman (http://benalman.com/)",
+  "version": "2.0.0",
+  "author": "Grunt Development Team (https://gruntjs.com/development-team)",
   "homepage": "http://gruntjs.com/",
   "repository": {
     "type": "git",
@@ -17,27 +17,27 @@
     "test": "grunt test"
   },
   "engines": {
-    "node": ">= 6"
+    "node": ">=10"
   },
   "keywords": [
     "grunt",
     "legacy"
   ],
   "dependencies": {
-    "async": "~1.5.2",
-    "exit": "~0.1.1",
-    "getobject": "~0.1.0",
+    "async": "~3.2.0",
+    "exit": "~0.1.2",
+    "getobject": "~1.0.0",
     "hooker": "~0.2.3",
-    "lodash": "~4.17.10",
-    "underscore.string": "~3.3.4",
-    "which": "~1.3.0"
+    "lodash": "~4.17.21",
+    "underscore.string": "~3.3.5",
+    "which": "~2.0.2"
   },
   "devDependencies": {
-    "grunt": "^1.0.2",
-    "grunt-cli": "^1.2.0",
-    "grunt-contrib-jshint": "^1.0.0",
-    "grunt-contrib-nodeunit": "^2.0.0",
-    "grunt-contrib-watch": "^1.0.0",
-    "temporary": "0.0.8"
+    "grunt": "^1.3.0",
+    "grunt-cli": "^1.3.2",
+    "grunt-contrib-jshint": "^3.0.0",
+    "grunt-contrib-nodeunit": "^3.0.0",
+    "grunt-contrib-watch": "^1.1.0",
+    "temporary": "1.1.0"
   }
 }
